# weather-mcp

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile  rust-toolchain.toml
.claude/: settings.json
.codex/: config.toml
.codex/rules/: default.rules
.github/workflows/: ci.yml
docs/decisions/: 0001-data-source-open-meteo.md  0002-build-in-rust-with-rmcp.md  0003-standalone-public-repo.md  0004-minimal-tool-surface.md  0005-hands-off-agent-development.md  0006-phased-delivery.md  0007-secrets-via-dotenvx.md
docs/design/: app-spec.md  test-plan.md  tool-specs.md
docs/guides/: ARCHITECTURE.md  DEVELOPMENT.md
docs/product/: now.md  roadmap.md
src/: compare.rs  dates.rs  lib.rs  location.rs  main.rs  server.rs  types.rs  wmo.rs
src/openmeteo/: archive.rs  fixture.rs  forecast.rs  http.rs  mod.rs
tests/: compare.rs  conformance.rs  dates.rs  live.rs  location.rs  parsing.rs
tests/common/: mod.rs
tests/fixtures/: README.md  RECORDING.md  archive_boston_1991-2026.json  forecast_boston.json  geocode_boston.json  geocode_empty.json
tests/snapshots/: conformance__call_compare_period.snap  conformance__call_get_forecast.snap  conformance__call_get_historical.snap  conformance__server_info_result.snap  conformance__tools_list.snap  conformance__tools_list_server_info.snap
